# UBB-Computer-Science

./: README.md
Semester 2/OOP/Practice/DeliverNow/: CMakeLists.txt  Courier.cpp  Courier.h  Observer.cpp  Observer.h  Package.cpp  Package.h  Repository.cpp  Repository.h  Service.cpp  Service.h  courier.txt  gui.cpp  gui.h  gui.ui  main.cpp  package,txt  package.txt
Semester 2/OOP/Practice/Issue/: CMakeLists.txt  Development.cpp  Development.h  Issue.cpp  Issue.h  Observer.cpp  Observer.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  dev.txt  gui.cpp  gui.h  gui.ui  issue.txt  main.cpp
Semester 2/OOP/Test2/AppilanceStore/: Appliance.cpp  Appliance.h  CMakeLists.txt  DishWasher.cpp  DishWasher.h  Refrigerator.cpp  Refrigerator.h  Service.cpp  Service.h  Ui.cpp  main.cpp
Semester 2/OOP/Test2/Test RealEstate/: CMakeLists.txt  Client.cpp  Client.h  Company.cpp  Company.h  Dwelling.cpp  Dwelling.h  Person.cpp  Person.h  RealEstateAgency.cpp  RealEstateAgency.h  Ui.cpp  Ui.h  main.cpp
Semester 2/OOP/Test2/Test Sensor/: CMakeLists.txt  Device.cpp  Device.h  HumiditySensor.cpp  HumiditySensor.h  Sensor.cpp  Sensor.h  SmokeSensor.cpp  SmokeSensor.h  TemperatureSensor.cpp  TemperatureSensor.h  Ui.cpp  Ui.h  main.cpp
Semester 2/OOP/Test2/TestCar/: CMakeLists.txt  Car.cpp  Car.h  ElectricEngine.cpp  ElectricEngine.h  Engine.cpp  Engine.h  Service.cpp  Service.h  TurboEngine.cpp  TurboEngine.h  Ui.cpp  Ui.h  main.cpp
Semester 2/OOP/Test2/TestHospital/: CMakeLists.txt  HospitalDepartment.cpp  HospitalDepartment.h  NeonataUnit.cpp  NeonataUnit.h  Service.cpp  Service.h  Surgery.cpp  Surgery.h  Ui.cpp  Ui.h  main.cpp
Semester 2/OOP/Test2/TestMedical/: BMI.cpp  BMI.h  BP.cpp  BP.h  CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  Ui.cpp  Ui.h  main.cpp
Semester 2/OOP/Test3/Bills/: CMakeLists.txt  Gui.cpp  Gui.h  Gui.ui  input.txt  main.cpp
Semester 2/OOP/Test3/Bills/Domain/: Bills.cpp  Bills.h
Semester 2/OOP/Test3/Bills/Repository/: Repository.cpp  Repository.h
Semester 2/OOP/Test3/Bills/Service/: Service.cpp  Service.h
Semester 2/OOP/Test3/SearchEngine/: CMakeLists.txt  input.txt  main.cpp
Semester 2/OOP/Test3/SearchEngine/Domain/: Document.cpp  Document.h
Semester 2/OOP/Test3/SearchEngine/Gui/: Gui.cpp  Gui.h  Gui.ui
Semester 2/OOP/Test3/SearchEngine/Repository/: Repository.cpp  Repository.h
Semester 2/OOP/Test3/SearchEngine/Service/: Service.cpp  Service.h
Semester 2/OOP/Test3/TaskTest/: CMakeLists.txt  input.txt  main.cpp
Semester 2/OOP/Test3/TaskTest/Domain/: Task.cpp  Task.h
Semester 2/OOP/Test3/TaskTest/GUI/: Gui.cpp  Gui.h  Gui.ui
Semester 2/OOP/Test3/TaskTest/Repository/: Repository.cpp  Repository.h
Semester 2/OOP/Test3/TaskTest/Service/: Service.cpp  Service.h
Semester 2/OOP/a2-3-Nanu25/: CMakeLists.txt  Ui.c  Ui.h  main.c
Semester 2/OOP/a2-3-Nanu25/Domain/: domain.c  domain.h
Semester 2/OOP/a2-3-Nanu25/DynamicArray/: Dynamic_array.c  Dynamic_array.h
Semester 2/OOP/a2-3-Nanu25/Repository/: repository.c  repository.h
Semester 2/OOP/a2-3-Nanu25/Service/: service.c  service.h
Semester 2/OOP/a2-3-Nanu25/Tests/: Test.c  Test.h
Semester 2/OOP/oop-a10-Nanu25 - Copy/: CMakeLists.txt  Observer.cpp  Observer.h  main.cpp  repo.csv
Semester 2/OOP/oop-a10-Nanu25 - Copy/Domain/: Movie.cpp  Movie.h
Semester 2/OOP/oop-a10-Nanu25 - Copy/Repository/: CSVRepository.h  FileRepository.cpp
Semester 2/OOP/oop-a10-Nanu25 - Copy/Service/: Service.cpp  Service.h
Semester 2/OOP/oop-a10-Nanu25 - Copy/UI/: GUI.cpp  GUIWithDesigner.cpp  GUIWithDesigner.h  GUIWithDesigner.ui  Ui.h  gui_user.cpp  gui_user.h  gui_user.ui
Semester 2/OOP/oop-a10-Nanu25 - Copy/Undo_Redo/: UndoRedo.cpp  UndoRedo.h
Semester 2/OOP/oop-a4-5-Nanu25/: CMakeLists.txt  CMakeSettings.json  main.cpp
Semester 2/OOP/oop-a4-5-Nanu25/Domain/: Movie.cpp  Movie.h
Semester 2/OOP/oop-a4-5-Nanu25/DynamicArray/: DynamicArray.cpp  DynamicArray.h
Semester 2/OOP/oop-a4-5-Nanu25/Repository/: Repository.cpp  Repository.h
Semester 2/OOP/oop-a4-5-Nanu25/Service/: Service.cpp  Service.h
Semester 2/OOP/oop-a4-5-Nanu25/Tests/: tests.cpp  tests.h
Semester 2/OOP/oop-a4-5-Nanu25/UI/: Ui.cpp  Ui.h
Semester 2/OOP/oop-a6-7-Nanu25/: CMakeLists.txt  Validator.h  aaa  main.cpp  repo.csv
Semester 2/OOP/oop-a6-7-Nanu25/Domain/: Movie.cpp
Semester 2/OOP/oop-a6-7-Nanu25/Repository/: FileRepository.h  HTMLRepository.cpp  HTMLRepository.h  Repository.h
Semester 2/OOP/oop-a6-7-Nanu25/Service/: Service.cpp  Service.h
Semester 2/OOP/oop-a6-7-Nanu25/Tests/: tests.cpp  tests.h
Semester 2/OOP/oop-a6-7-Nanu25/UI/: Ui.cpp  Ui.h
Semester 2/OOP/oop-a8-9-Nanu25/: CMakeLists.txt  Validator.cpp  Validator.h  main.cpp  repo.html  watchList.html  watchList_data
Semester 2/OOP/oop-a8-9-Nanu25/Domain/: Movie.h
Semester 2/OOP/oop-a8-9-Nanu25/DynamicArray/: DynamicArray.h
Semester 2/OOP/oop-a8-9-Nanu25/Repository/: CSVRepository.cpp  HTMLRepository.cpp  Repository.cpp
Semester 2/OOP/oop-a8-9-Nanu25/UI/: GUI.h  GUIWithDesigner.cpp  GUIWithDesigner.h  GUIWithDesigner.ui  Ui.cpp  Ui.h  gui_user.cpp  gui_user.h  gui_user.ui
Semester 2/OOP/oop-e-912-914-Nanu25/: CMakeLists.txt  Ideea.cpp  Ideea.h  Observer.cpp  Observer.h  Repository.cpp  Repository.h  Researcher.cpp  Researcher.h  Service.cpp  Service.h  a.txt  gui.cpp  gui.h  gui.ui  ideea.txt  main.cpp  researcher.txt
Semester 2/OOP/oop-t2-Nanu25/: Block.cpp  Block.h  Building.cpp  Building.h  CMakeLists.txt  House.cpp  House.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Semester 2/OOP/t1-Nanu25-1/: CMakeLists.txt  README.md  main.cpp
Semester 2/OOP/t1-Nanu25-1/Domain/: Domain.cpp  Domain.h
Semester 2/OOP/t1-Nanu25-1/DynamicArray/: DynamicArray.cpp  DynamicArray.h
Semester 2/OOP/t1-Nanu25-1/Repository/: Repository.cpp  Repository.h
Semester 2/OOP/t1-Nanu25-1/Service/: Service.cpp  Service.h
Semester 2/OOP/t1-Nanu25-1/Tests/: Test.cpp  Test.h
Semester 2/OOP/t1-Nanu25-1/UI/: Ui.cpp  Ui.h
Semester3/DB/: SQLQueryLab1.sql
Semester6/: .gitkeep
a2-Nanu25/: laboratory 2.py
(+1212 files in other folders)
