cmake_minimum_required(VERSION 3.28)
project(oop_t2_Nanu25)

set(CMAKE_CXX_STANDARD 14)

add_executable(oop_t2_Nanu25
        main.cpp
        Building.cpp
        Building.h
        Block.cpp
        Block.h
        House.cpp
        House.h
        Service.cpp
        Service.h
        UI.cpp
        UI.h)
